# stock_forecast

./: .gitignore  README.md  data_preparator.py  main.py  model.py  model_trainer.py  prepare_data.py  pyproject.toml  run_experiment.py  stock_data_generator.py  stock_data_generator_v2.py
config/: config.yaml
configs/: config.yaml
data/: data_module.py
evaluation/: backtester.py
experiments/: main.py
models/: model.py
outputs/2026-03-14/20-33-32/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-15/15-49-33/.hydra/: hydra.yaml
outputs/2026-03-15/15-50-42/.hydra/: hydra.yaml
outputs/2026-03-15/15-50-59/.hydra/: hydra.yaml
outputs/2026-03-15/15-51-37/.hydra/: hydra.yaml
src/: data_loader.py  data_manager.py  dataset.py  features.py
src/evaluation/: backtester.py  evaluator.py  model_evaluator.py  portfolio_evaluator.py
src/models/: simple_linear.py  simple_lstm.py
src/training/: checkpointer.py  model_trainer.py  trainer.py
viz/: visualizer.py
