[project]
name = "stock-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "mlflow>=3.10.1",
    "numpy<2",
    "pathlib>=1.0.1",
    "scikit-learn>=1.8.0",
    "torch<=2.2.2",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
]
